Project

General

Profile

Actions

Bug #21771

closed

[journal] possible infinite loop within journal:tag_list class method

Added by Jason Dillaman over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

A bug was introduced when the "more" flag was added to "cls_cxx_map_get_vals". The loop previously cleared the value map to indicate that the loop should break but now the loop is controlled by the "more" flag and not stopping. This results in an OSD being killed by the heartbeat test.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #21782: luminous: [journal] possible infinite loop within journal:tag_list class methodResolvedActions
Actions #1

Updated by Jason Dillaman over 6 years ago

  • Source set to Community (user)
Actions #2

Updated by Jason Dillaman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21782: luminous: [journal] possible infinite loop within journal:tag_list class method added
Actions #5

Updated by Jason Dillaman about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF