cls/journal: fixed possible infinite loop which could kill the OSD

Fixes: http://tracker.ceph.com/issues/21771
Signed-off-by: Jason Dillaman <dillaman@redhat.com>